deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: status
  template:
    metadata:
      labels:
        app: status
    spec:
      containers:
      - name: status
        image: status-service
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
