service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-service
spec:
  type: NodePort
  selector:
    app: status
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30007
